--- a/index.html
+++ b/index.html
@@ -21,26 +21,29 @@
                       </div>
                   
                       <div class="nav-link-wrapper">
-                          <a href="index2.html">----</a>
+                          <a href="learn.html">Learn</a>
                       </div>
                   
                       <div class="nav-link-wrapper">
-                        <a href="####.html">----</a>
+                        <a href="signup.html">SignUp/SignIn</a>
                       </div>
                 </div>
   </div>
 
   <div class="pimg1">
     <div class="ptextZ">
-      <span class="borderZ">
-        S I G N A C A D E M Y <br><br>
-      </span>
-      <a href="learn.html"><button class="btn" type="button">Click Me!</button></a>
+        <p id="logo_text">
+          SIGN ACADEMY
+        </p>
+      <p id="sublogo_text">
+        An AI-powered ASL assistant
+      </p>
+      <a href="learn.html"><button class="btn" type="button" id="learn_button">Learn</button></a>
     </div>
   </div>
 
   <section class="section section-light">
-    <h2>About Us</h2>
+    <h2><a href="about.html">About Us</a></h2>
     <p>
       Welcome! We are a team of individuals who want to help out the voiceless especially those with hearing loss. 
       We all had hoped to achieve something great that would benefit as many people as we could and with 
@@ -53,40 +56,45 @@
   <div class="pimg2">
     <div class="ptext">
       <span class="border trans">
-        Support
+        Comprehension
       </span>
     </div>
   </div>
 
-  <section class="section section-dark">
-    <h2>Bus Routes</h2>
+  <section class="section section-grey">
+    <h2><a class="darkh2" href="learn.html">Learn</a></h2>
     <p>
-      Lorem ipsum  
+      Learn ASL on your own stime and schedule! We are a free website dedicated to helping you learn sign language. 
+      We have hundreds of activities and many videos for you to look through.
+      We have packaged our videos into three sections- Beginner, Intermediate, and expert. 
+      Feel free to suggest any content you would love for us to add into our curriculum as we continue to add more content to our site!
     </p>
   </section>
 
   <div class="pimg3">
     <div class="ptext">
       <span class="border trans">
-        Assitance
+        Education
       </span>
     </div>
   </div>
 
   <section class="section section-dark">
-    <h2>Map</h2>
+    <h2><a class="darkh2" href="signup.html">Sign In/Sign In</a></h2>
     <p>
-      Lorem ipsum
+      Join us today! Create a free account and start learning right away. Your can create your account using your facebook, twitter, or google account. 
+      If you don't have any of those that's ok! Make a free account drectly from our website. Having an account will help us save your progress and information. 
+      Already have an account? Awesome! Log in and see your progress. We'll even help make a schedule and recommend you some helpful resources!
     </p>
   </section>
 
   <div class="pimg1">
     <div class="ptext">
       <span class="border">
-        We Stand By Your Side<br>
+        More to come!<br>
       </span>
       <span class="border2">
-        <br><i>Support And Assitance To The Less Fortuante</i>
+        <br><i>`~</i>
       </span>
     </div>
   </div>
