--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Parallax Website Demo</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="ASL-Icon-2.png">
 </head>
 
 <body>
