--- a/learn.html
+++ b/learn.html
@@ -7,6 +7,7 @@
   <title>Parallax Website Demo</title>
     <!-- import the webpage's stylesheet -->
   <link rel="stylesheet" href="/css_sheet.css">
+    <link rel="icon" href="ASL-Icon-2.png">
     
     <!-- import the p5.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
