--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Signup Form Design Tutorial </title>   
     <link rel="stylesheet" type="text/css" href="signup.css">
+    <link rel="icon" href="ASL-Icon-2.png">
+
 </head>
 <body>
   
