--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style2.css">
+      <link rel="icon" href="ASL-Icon-2.png">
+
 </head>
 <body>
 
