--- a/learn.html
+++ b/learn.html
@@ -53,7 +53,7 @@
   // Classifier Variable
   let classifier;
   // Model URL
-  let imageModelURL = 'https://teachablemachine.withgoogle.com/models/cmr1u8pD8/';
+  let imageModelURL = 'https://teachablemachine.withgoogle.com/models/yeqPR8eFq/';
   
   // Video
   let video;
