--- a/learn.html
+++ b/learn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Parallax Website Demo</title>
+  <title>Learn - SignAcademy</title>
     <!-- import the webpage's stylesheet -->
   <link rel="stylesheet" href="/css_sheet.css">
     <link rel="icon" href="ASL-Icon-2.png">
