--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title> Signup Form Design Tutorial </title>   
+  <title>Signup Form - SignAcademy</title>   
     <link rel="stylesheet" type="text/css" href="signup.css">
     <link rel="icon" href="ASL-Icon-2.png">
 
