--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>About - SignAcademy</title>
     <link rel="stylesheet" href="style2.css">
       <link rel="icon" href="ASL-Icon-2.png">
 
